<resources>
    <string name="app_name">Omlah</string>
    <string name="appname">Omlah</string>
    <string name="offer">Offer</string>
    <string name="facebook_app_id" translatable="false" >1667681846678610</string>
    <string name="SELECTALANGUAGE">SELECT A LANGUAGE</string>
    <string name="Earned">Earned</string>
    <string name="AddBankAccountScreen">Add Bank Account</string>
    <string name="PaymentDetails">Payment Details</string>
    <string name="Select">Select</string>
    <string name="SelectPaymentMode">Select Payment Mode</string>
    <string name="AmountPayable">Amount Payable</string>
    <string name="VIEWALLCARDS">VIEW ALL CARDS</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="DigitalPaymentSolution">Digital Payment Solution</string>
    <string name="NEWUPDATE">NEW UPDATE</string>
    <string name="UpdateNow">Update Now</string>
    <string name="NOTNOW">NOT NOW</string>
    <string name="string_first">Send and Receive Payments</string>
    <string name="string_second">Scan and Pay Merchants</string>
    <string name="string_third">Book Events Tickets</string>
    <string name="string_forth">Instant Recharge Anytime</string>
    <string name="content_Zero">UAE first Digital Payment Solution</string>
    <string name="content_first">Use  Pay to send, receive payments for your online transactions</string>
    <string name="content_second">Pay using “scan and pay” feature within fraction of seconds</string>
    <string name="content_third">You can book tickets for the events posted by merchants</string>
    <string name="content_forth">Instant transaction, bill payment is possible at anytime &amp; anywhere</string>
    <string name="LOGIN">LOGIN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="GetStarted">Get Started</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Continue">Continue</string>
    <string name="LoginDes">Login into  to enjoy a seamless payment \n experience with awesome offers!</string>
    <string name="EnterValidNumber">Please enter a valid number</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email id</string>
    <string name="SelectYourCountry">Select your country</string>
    <string name="ReferCode">Refer Code</string>
    <string name="Password">Password</string>
    <string name="EnterFirstName">Please enter a first name</string>
    <string name="EnterLastName">Please enter a last name</string>
    <string name="EnterEmail">Please enter a email</string>
    <string name="EnterValidEmail">Please enter a valid email</string>
    <string name="EnterNumber">Please enter a number</string>
    <string name="EnterCountry">Please select a country</string>
    <string name="EnterPassword">Please enter a password</string>
    <string name="Invalidreferralcode">Invalid referral code</string>
    <string name="EnterValidReferCode">Please enter valid refer code</string>
    <string name="ResetPasswordText">Password should have a minimum of 6 characters, at least one numeric and one non-numeric character.</string>
    <string name="UpdatePlayService">Please update your google play service!!!</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="WelcomeBack">Welcome Back!</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="EnterMobileNumber">Please enter a mobile number</string>
    <string name="ClearExitSession">Clear exist session to login</string>
    <string name="OTPsent">OTP sent successfully in your registered number and email</string>
    <string name="LogoutForOtherDevice">Logout for other device</string>
    <string name="AlreadyYouLoggedIn">Already you logged-in another device, so please click ok to continue this device.</string>
    <string name="AreYouSureWantToExit">Are you sure want to exit</string>
    <string name="SCANQRCODE">SCAN QR CODE</string>
    <string name="FINDNEARBY">FIND NEAR BY</string>
    <string name="PAYNOW">PAY NOW</string>
    <string name="RECEIVE">RECEIVE</string>
    <string name="RequestMoney">Request Money</string>
    <string name="Myfamilyfriendlist">My family &amp; friend\'s list</string>
    <string name="Yourbeneficiarylistisempty">Your beneficiary list is empty</string>
    <string name="SendMoney">Send Money</string>
    <string name="Pleasetryagain">Please try again..</string>
    <string name="ORSIGNUP">OR SIGN IN WITH</string>
    <string name="Facebook">FACEBOOK</string>
    <string name="Google">GOOGLE</string>
    <string name="PleaseEnterNewPin">Please enter a new pin</string>
    <string name="PleaseEnterOTP">Please enter a OTP</string>
    <string name="PleaseEnterValidOTP">Please enter a valid OTP</string>
    <string name="PinChanged">Security pin changed successfully</string>
    <string name="CheckregesteredEmail">Check OTP on your registered mobile number or regestered email.</string>
    <string name="ConfirmPayment">Confirm Payment</string>
    <string name="PleaseEnterValidAmountYouHave">Please enter valid amount, you have</string>
    <string name="RemainingYourWallet">remaining in your wallet.</string>
    <string name="WouldYouLikeAddTip">Would you like to add a tip</string>
    <string name="Youget">You get</string>
    <string name="RewardPointsAfterPaymentSuccess">reward points after payment success</string>
    <string name="ShopName">Shop Name</string>
    <string name="AmountPay">Amount Pay</string>
    <string name="ResetPassword">RESET PASSWORD</string>
    <string name="ResetSecurityPin">RESET SECURITY PIN</string>
    <string name="NewPassword">New Password</string>
    <string name="NewSecurityPin">New security pin</string>
    <string name="OldPassword">Old Password</string>
    <string name="OTP">OTP</string>
    <string name="CheckOTP">Check OTP on your registered mobile number or regestered email.</string>
    <string name="ENTERNEWPASSWORD">Please enter a new password</string>
    <string name="ENTEROTP">Please enter a OTP</string>
    <string name="ENTERVALIDOTP">Please enter a valid OTP</string>
    <string name="TouchIDPasscode">Touch ID or Enter security pin</string>
    <string name="EnterPin">Please enter your security pin</string>
    <string name="CreatePin">Create your Security Pin</string>
    <string name="SecureAccess">this code will secure access to your</string>
    <string name="PersonalData">personal data</string>
    <string name="ForgotPin">FORGET PIN?</string>
    <string name="Reenter">Please re-enter a correct security pin</string>
    <string name="ConfirmSecurityPin">Confirm your security pin</string>
    <string name="NewPin">Create your new security pin</string>
    <string name="OldPin">Please enter your old security pin</string>
    <string name="OTPsentsuccessfully">OTP sent successfully</string>
    <string name="Delete">Delete</string>
    <string name="OTPVerification">OTP VERIFICATION</string>
    <string name="OTPBanner">Sit back &amp; Relax! while we verify your \n mobile number</string>
    <string name="OtpToast">( Enter the OTP below in case if we fail to detect the \n SMS automatically )</string>
    <string name="ResendCode">TAP TO RESEND CODE</string>
    <string name="Home">Home</string>
    <string name="Nearby">Stores</string>
    <string name="Feeds">Feeds</string>
    <string name="Events">Events</string>
    <string name="Stores">Stores</string>
    <string name="More">More</string>
<string name="RPay">RPay</string>
    <string name="WalletBalance">Wallet Balance</string>
    <string name="BalanceDetails">R Points></string>
    <string name="ADDMONEY">ADD MONEY</string>
    <string name="PopCoins">Pop Coins</string>
    <string name="POPPAYNOW"> NOW</string>
    <string name="RecentTransaction">Recent Transaction</string>
    <string name="Send">Send</string>
    <string name="Request">Request</string>
    <string name="WALLET">WALLET</string>
    <string name="COUPONS">COUPONS</string>
    <string name="Coupons">Coupons</string>
    <string name="Offers">Offers</string>
    <string name="RECHARGE">RECHARGE</string>
    <string name="BILLPAYMENT">BILL PAYMENTS</string>
    <string name="TRANSACTIONS">TRANSACTIONS</string>
    <string name="REFERRAL">REFERRAL</string>
    <string name="REWARDS">REWARDS</string>
    <string name="BillPayment">Bill Payments</string>
    <string name="ComingSoon">Coming Soon...</string>
    <string name="SelectNetwork">Select Network</string>
    <string name="Recharge">Recharge</string>
    <string name="YouRecentRewardsWillAppearHere">You recent rewards \n will appear here</string>
    <string name="RechargeBillPaymentsampmore">Recharge, Bill Payments &amp; more</string>
    <string name="Earn200morepointstoredeemalenovaLaptop">Earn 200 more points to redeem a lenova Laptop</string>
    <string name="pleaseenteraamount">please enter a amount</string>
    <string name="pleaseenteravalidamount">please enter a valid amount</string>
    <string name="Thisdeviceisnotsupported">This device is not supported.</string>
    <string name="Sessionexpiredpleaselogintocontinue">Session expired, please login to continue</string>
    <string name="DealsNearbyyou">Deals Nearby you</string>
    <string name="Mywallet">My Wallet</string>
    <string name="MyAccount">My Profile</string>
    <string name="MyAccountDes">Manage your profile information here.</string>
    <string name="MyWalletDes">TopUp your wallet from your credit card.</string>
    <string name="Transaction">Transaction History</string>
    <string name="MyVoucherCode">My Coupon Code</string>
    <string name="TransactionDes">Your past transactions on  app and other merchants.</string>
    <string name="MoneyRequest">Money Request</string>
    <string name="MoneyRequestDes">You can request money from other customer.</string>
    <string name="MyVoucherCodeDes">Your voucher code information here.</string>
    <string name="EventBooking">Event Booking History</string>
    <string name="EventBookingDes">Your recent booking history on  app and other merchants.</string>
    <string name="Popcoins">Rewards</string>
    <string name="PopcoinsDes">Earn coins from merchant, Get benefits from .</string>
    <string name="MyContacts">My Beneficiaries</string>
    <string name="AddBeneficiary">Add Beneficiary</string>
    <string name="MyContactsDes">Add all your beneficiary information here.</string>
    <string name="ReferAndEarn">Refer &amp; Earn</string>
    <string name="ReferAndEarnDes">Refer your friends and earn.</string>
    <string name="Bussinesaccount">Register as business account</string>
    <string name="BussinesaccountDes">Your past transactions on  app and other merchants.</string>
    <string name="Rfid">Smart Card</string>
    <string name="RfidDes">Your own Smart Card.</string>
    <string name="Settings">Settings</string>
    <string name="SettingsDes">Make all your settings.</string>
    <string name="All">All</string>
    <string name="Paid">Paid</string>
    <string name="Received">Received</string>
    <string name="Topup">Topup</string>
    <string name="Refund">Refund</string>
    <string name="RecentTransactionAppearHere">Your recent transaction \n will appear here</string>
    <string name="ConfirmDetails">Confirm your details to Proceed</string>
    <string name="Amount">Amount</string>
    <string name="description">Description </string>
    <string name="Requestnow">Request Now</string>
    <string name="Withdrawn">Withdrawn</string>
    <string name="Share">Share</string>
    <string name="SharePost">Share this post in social media</string>
    <string name="HidePost">Hide this post</string>
    <string name="IDontWantPost">I don\'t want to see this post in my feed</string>
    <string name="Unfollowtheshop">Unfollow the shop</string>
    <string name="StopSeeingFeedsShop">Stop seeing feeds from this shop</string>
</resources>