<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginEnd="10dp"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bannerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:text="@string/LogoutForOtherDevice"/>

        <TextView
            android:id="@+id/bannerText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="15dp"
            android:paddingEnd="15dp"
            android:gravity="start"
            android:textSize="12sp"
            android:text="@string/AlreadyYouLoggedIn"
            android:layout_below="@+id/bannerText"/>


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="15sp"
            android:layout_toLeftOf="@+id/okButton"
            android:layout_toStartOf="@+id/okButton"
            android:fontFamily="@font/medium"
            android:textColor="@color/darkred"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true" />


        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:textSize="15sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/darkred"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>