<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="160dp"
    android:background="@drawable/gray_white_border">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:id="@+id/sharePostImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_post"/>

        <LinearLayout
            android:id="@+id/shareFeedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/sharePostImageView"
            android:layout_toEndOf="@+id/sharePostImageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Share"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SharePost"
                android:textSize="12sp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:id="@+id/hidePostImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_post"/>

        <LinearLayout
            android:id="@+id/hideFeedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/hidePostImageView"
            android:layout_toRightOf="@+id/hidePostImageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HidePost"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IDontWantPost"
                android:textSize="12sp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:id="@+id/deletePostImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/block_post"/>

        <LinearLayout
            android:id="@+id/unfollowFeedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/deletePostImageView"
            android:layout_toRightOf="@+id/deletePostImageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unfollowtheshop"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StopSeeingFeedsShop"
                android:textSize="12sp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>